--- a/index.html
+++ b/index.html
@@ -1,89 +1,106 @@
 <!DOCTYPE html>
-<!-- saved from url=(0056)http://www.cgscomputing.com/1618/experiments/story.html? -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta charset="utf-8">
-	<title>
-		Collabowrite
-	</title>
+<html ng-app>
 
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<head>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <meta charset="utf-8">
 
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://bootswatch.com/paper/bootstrap.min.css">
+    <title>Collabowrite</title>
+    <!-- Latest compiled and minified CSS -->
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Optional theme -->
+    <link href="https://bootswatch.com/paper/bootstrap.min.css" rel="stylesheet">
+    <!-- Latest compiled and minified JavaScript -->
 
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="./index_files/bootstrap.min.js"></script>
+    <script src="./index_files/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
 </head>
-<body cz-shortcut-listen="true">
-	<script>
-		var story = [];
-		var output = "";
 
-		function arr2string() {
-		 	for (i=0;i<story.length;i++) {
+<body>
+    <script>
+        var story = [];
+        var output = "";
 
-		 		if (i!== story.legnth - 1) {output+=story[i] + " ";}
-		 		else {output+=story[i];}
-		 	}
+        function arr2string() {
+            for (i = 0; i < story.length; i++) {
 
-		 	return output
-		}
+                if (i !== story.legnth - 1) {
+                    output += story[i] + " ";
+                } else {
+                    output += story[i];
+                }
+            }
 
-		function pass() {
-			story.push(document.getElementById("textArea").value);
-			document.getElementById("prev").innerHTML = story[story.length - 1];
-			console.log(story);
+            return output
+        }
 
-		}
+        function pass() {
+            story.push(document.getElementById("textArea").value);
+            document.getElementById("prev").innerHTML = story[story.length - 1];
+            console.log(story);
 
-		function endS() {
-			document.getElementById("top").style.display = "none";
-			document.getElementById("bottom").style.display = "none";
-			document.getElementById("story").innerHTML = arr2string();
-			document.getElementById("done").style.display = "initial";
-			document.getElementById("endbutton").style.display = "none";
-		}
-	</script>
-	<div class="row" id="top">
-		<div class="col-lg-3"></div>
-		<div class="col-lg-6">
-			<h1>Collabowrite</h1>
-			<p class="lead">Play with 3 or more people for maximum chaos.</p>
-			<p class="" id="prev">This text will be replaced with whatever you write below. Every time a new sentence is added, only the previous will be shown. Remember to use proper grammar with a period at the end and a capital at the start.</p>
-		<hr>
-		</div>
-	</div>
-	<form class="form-horizontal" id="bottom">
-	  <fieldset>
-	    <div class="form-group">
-	      <label for="textArea" class="col-lg-3 control-label">Type a sentence</label>
-	      <div class="col-lg-6">
-	        <textarea class="form-control" rows="3" id="textArea"></textarea>
-	        <span class="help-block">Once you're done adding to the story, pass the keyboard to the next person or press end to view the entire story and finish the session.</span>
-	      </div>
-	    </div>
+        }
 
-	    <div class="form-group">
-	      <div class="col-lg-10 col-lg-offset-3">
-	        <button id="passButton" type="reset" class="btn btn-default" onclick="pass()">Pass the keyboard</button>
+        function endS() {
+            document.getElementById("top").style.display = "none";
+            document.getElementById("bottom").style.display = "none";
+            document.getElementById("story").innerHTML = arr2string();
+            document.getElementById("done").style.display = "initial";
+            document.getElementById("endbutton").style.display = "none";
+        }
+    </script>
 
-	      </div>
-	    </div>
-	  </fieldset>
-	</form>
-	<div class="row">
-		<div class="col-lg-3"></div>
-		<button class="btn btn-primary" style="margin-left: 15px;" id="endbutton" onclick="endS()">End story</button>
-	</div>
+    <div class="row" id="top">
+        <div class="col-lg-3"></div>
 
-	<div class="row" id="done" style="display: none;">
-		<div class="col-lg-3"></div>
-		<div class="col-lg-6">
-			<h3>The whole story</h3>
-			<p class="lead" id="story"></p>
-		<hr>
-		</div>
-	</div>
+        <div class="col-lg-6">
+            <h1>Collabowrite</h1>
 
-</body></html>
+            <p class="lead">Play with 3 or more people for maximum chaos.</p>
+
+            <p class="" id="prev">This text will be replaced with whatever you write below. Every time a new sentence is added, only the previous will be shown. Remember to use proper grammar with a period at the end and a capital at the start.</p>
+            <hr>
+        </div>
+    </div>
+
+    <form class="form-horizontal" id="bottom" name="bottom">
+        <fieldset>
+            <div class="form-group">
+                <label class="col-lg-3 control-label" for="textArea">Type a sentence
+                </label>
+
+                <div class="col-lg-6">
+                    <textarea class="form-control" id="textArea" rows="3">
+                    </textarea> <span class="help-block">Once you're done adding to the story, pass
+the keyboard to the next person or press end to view the entire story and
+finish the session.</span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-lg-10 col-lg-offset-3">
+                    <button class="btn btn-default" id="passButton" onclick="pass()" type="reset">Pass the keyboard</button>
+                </div>
+            </div>
+        </fieldset>
+    </form>
+
+    <div class="row">
+        <div class="col-lg-3"></div>
+        <button class="btn btn-primary" id="endbutton" onclick="endS()" style="margin-left: 15px;">End story
+        </button>
+    </div>
+
+    <div class="row" id="done" style="display: none;">
+        <div class="col-lg-3"></div>
+
+        <div class="col-lg-6">
+            <h3>The whole story</h3>
+
+            <p class="lead" id="story"></p>
+            <hr>
+        </div>
+    </div>
+</body>
+
+</html>
