--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app>
+<html>
 
 <head>
     <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -13,7 +13,6 @@
     <!-- Latest compiled and minified JavaScript -->
 
     <script src="./index_files/bootstrap.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
 </head>
 
 <body>
